<resources>
    <string name="app_name">Rentron 2.0</string>
    <string name="first_name">First Name...</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter password</string>
    <string name="last_name">Last Name</string>
    <string name="textview">TextView</string>
    <string name="landlord">Landlord</string>
    <string name="welcome_client">Welcome Client</string>
    <string-array name="user_array">
        <item>Client</item>
        <item>Landlord</item>
        <item>Property Manager</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">logout</string>
    <string name="Signup">Signup</string>
    <string name="login">login</string>
    <string name="admin">Admin</string>
    <string name="delete_client">Delete Account</string>
    <string name="submit">submit</string>
    <string name="enter_your_birth_year">Enter your birth year</string>
    <string name="defamation">The filthier the landlord the richer</string>
    <string name="back">back</string>
    <string name="property_manager">Property Manager</string>
    <string name="client">Client</string>
    <string name="street_number">Street Number</string>
    <string name="street_name">Street Name</string>
    <string name="postal_code_a1a1a1">Postal Code...A1A1A1</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="welcome_oh_lord_of_the_land">Welcome oh lord of the land</string>
</resources>