<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="731dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/app_name"
            android:textSize="50dp" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:layout_height="57dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text"
            tools:text="@tools:sample/first_names" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text"
            tools:text="@tools:sample/last_names" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Signup" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="403dp"
            android:layout_height="120dp"
            android:text="@string/textview" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/adminbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>